--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -24,21 +24,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 26.071 ms\n",
+      "ptxas info    : Compile time = 14.914 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 842.400 ms\n",
+      "ptxas info    : Compile time = 852.639 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 152 registers, used 1 barriers, 2144 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 616.001 ms\n",
+      "ptxas info    : Compile time = 549.754 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -57,21 +57,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 18.156 ms\n",
+      "ptxas info    : Compile time = 14.568 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 1464.738 ms\n",
+      "ptxas info    : Compile time = 823.423 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 126 registers, used 1 barriers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 114.925 ms\n",
+      "ptxas info    : Compile time = 116.883 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -90,21 +90,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.493 ms\n",
+      "ptxas info    : Compile time = 15.263 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 883.549 ms\n",
+      "ptxas info    : Compile time = 841.030 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 91 registers, used 1 barriers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 131.727 ms\n",
+      "ptxas info    : Compile time = 116.367 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -386,7 +386,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x7ae61414dcc0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x76d332b31ec0>\n",
       "All tests passed.\n"
      ]
     }
