--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -24,21 +24,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.914 ms\n",
+      "ptxas info    : Compile time = 15.071 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 852.639 ms\n",
+      "ptxas info    : Compile time = 817.280 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 152 registers, used 1 barriers, 2144 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 549.754 ms\n",
+      "ptxas info    : Compile time = 532.343 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -57,21 +57,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.568 ms\n",
+      "ptxas info    : Compile time = 14.503 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 823.423 ms\n",
+      "ptxas info    : Compile time = 1537.819 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 126 registers, used 1 barriers, 2080 bytes cumulative stack size, 420 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 116.883 ms\n",
+      "ptxas info    : Compile time = 110.968 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -90,21 +90,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 15.263 ms\n",
+      "ptxas info    : Compile time = 14.908 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 841.030 ms\n",
+      "ptxas info    : Compile time = 927.717 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 91 registers, used 1 barriers, 336 bytes cumulative stack size, 420 bytes cmem[0], 144 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 116.367 ms\n",
+      "ptxas info    : Compile time = 119.148 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -145,6 +145,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "init LAP CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling LAP kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved.cu -o /mnt/d//packing/temp/lap_batch.cubin\n",
+      "ptxas info    : 0 bytes gmem\n",
+      "ptxas info    : Compiling entry function 'diversity_shortcut_kernel' for 'sm_89'\n",
+      "ptxas info    : Function properties for diversity_shortcut_kernel\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 9.542 ms\n",
+      "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
+      "ptxas info    : Function properties for compute_costs\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 3.041 ms\n",
+      "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
+      "ptxas info    : Function properties for auction_kernel\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 7.088 ms\n",
+      "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
+      "ptxas info    : Function properties for hungarian_kernel\n",
+      "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
+      "ptxas info    : Compile time = 15.389 ms\n",
+      "\n",
+      "\n",
+      "--- Kernel: hungarian_kernel ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 40\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 1808\n",
+      "\n",
+      "--- Kernel: auction_kernel ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 35\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 0\n",
+      "\n",
+      "--- Kernel: compute_costs ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 29\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 0\n",
+      "\n",
+      "--- Kernel: diversity_shortcut_kernel ---\n",
+      "  Max threads per block (kernel): 1024\n",
+      "  Num registers: 29\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 0\n",
+      "  Local memory (bytes): 0\n",
       "Generation 0: Best costs = [[0.386849, 0.033446]]\n",
       "Generation 1: Best costs = [[0.386849, 0.013054]]\n",
       "Generation 2: Best costs = [[0.386849, 0.008866]]\n",
@@ -386,7 +441,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x76d332b31ec0>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7aec0d5755c0>\n",
       "All tests passed.\n"
      ]
     }
