Small speedup ,start setting up LUT

--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -52,10 +52,10 @@
    ],
    "source": [
     "# User inputs\n",
-    "N_TREES_LIST = [x.item() for x in list(np.arange(1,50))]  # List of N_trees to run\n",
+    "N_TREES_LIST = [33,34,35,36]+list(np.arange(50,101))  # List of N_trees to run\n",
     "N_PROCESSES = 3 if kgs.env=='local' else 8  # Maximum concurrent processes\n",
     "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
-    "SEED_BASE = 84  # Base seed for reproducibility\n",
+    "SEED_BASE = 85  # Base seed for reproducibility\n",
     "\n",
     "# Set up checkpoint/log directory\n",
     "CHECKPOINT_DIR = 'controller_runs/'\n",
