--- a/analysis/runs/controller.ipynb
+++ b/analysis/runs/controller.ipynb
@@ -51,14 +51,16 @@
     }
    ],
    "source": [
+    "DO_CHECK = False\n",
+    "\n",
     "# User inputs\n",
-    "N_TREES_LIST = [33,34,35,36]+list(np.arange(50,101))  # List of N_trees to run\n",
+    "N_TREES_LIST = [33,34,35,36]+list(np.arange(50,101)) if not DO_CHECK else [34,35,36,37]  # List of N_trees to run\n",
     "N_PROCESSES = 3 if kgs.env=='local' else 8  # Maximum concurrent processes\n",
     "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
     "SEED_BASE = 85  # Base seed for reproducibility\n",
     "\n",
     "# Set up checkpoint/log directory\n",
-    "CHECKPOINT_DIR = 'controller_runs/'\n",
+    "CHECKPOINT_DIR = 'controller_runs/' if not DO_CHECK else 'check_runs/'\n",
     "os.makedirs(kgs.temp_dir + CHECKPOINT_DIR, exist_ok=True)\n",
     "print(f\"Using checkpoint directory: {CHECKPOINT_DIR}\")\n",
     "\n",
@@ -71,7 +73,9 @@
     "base_runner.ga.do_legalize = True\n",
     "base_runner.use_atomic_save = True  # Enable atomic saves for multiprocess safety\n",
     "\n",
-    "base_runner.diagnostic_plot = False  # Disabled in subprocessbase_runner.save_every = 1\n"
+    "base_runner.diagnostic_plot = False  # Disabled in subprocessbase_runner.save_every = 1\n",
+    "if DO_CHECK:\n",
+    "    base_runner.n_generations = 1000"
    ]
   },
   {
