--- a/analysis/test_lut.ipynb
+++ b/analysis/test_lut.ipynb
@@ -23,17 +23,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.552 ms\n",
+      "ptxas info    : Compile time = 18.871 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 438.518 ms\n",
+      "ptxas info    : Compile time = 1711.815 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 363.781 ms\n",
+      "ptxas info    : Compile time = 347.204 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -50,17 +50,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.553 ms\n",
+      "ptxas info    : Compile time = 8.189 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 427.199 ms\n",
+      "ptxas info    : Compile time = 403.921 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 73.432 ms\n",
+      "ptxas info    : Compile time = 73.972 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -77,17 +77,17 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.225 ms\n",
+      "ptxas info    : Compile time = 8.390 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 413.984 ms\n",
+      "ptxas info    : Compile time = 404.819 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 420 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 78.741 ms\n",
+      "ptxas info    : Compile time = 73.873 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -191,8 +191,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.31 s, sys: 0 ns, total: 2.31 s\n",
-      "Wall time: 2.27 s\n"
+      "CPU times: user 2.29 s, sys: 3.59 ms, total: 2.3 s\n",
+      "Wall time: 2.21 s\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "824d0540",
    "metadata": {},
    "outputs": [
@@ -212,36 +212,7 @@
      "output_type": "stream",
      "text": [
       "Building LUT with 64000000 grid points (400 x 400 x 400)\n",
-      "Solution shape: xyt=(64000000, 2, 3), h=(64000000, 3)\n",
-      "Cost range: [0.000000, 0.240849]\n",
-      "LUT_vals shape: (400, 400, 400)\n",
-      "init CUDA LUT (USE_TEXTURE=True)\n",
-      "  Created 3D texture: (400, 400, 400)\n",
-      "Detected GPU compute capability: 89 (arch=sm_89)\n",
-      "Compiling: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -lineinfo -arch=sm_89 -cubin /mnt/d//packing/temp/pack_cuda_lut_saved.cu -o /mnt/d//packing/temp/pack_cuda_lut.cubin\n",
-      "/mnt/d//packing/temp/pack_cuda_lut_saved.cu:5: warning: \"M_PI\" redefined\n",
-      "    5 | #define M_PI 3.14159265358979323846f\n",
-      "      | \n",
-      "In file included from /usr/include/c++/13/cmath:47,\n",
-      "                 from /usr/include/c++/13/math.h:36,\n",
-      "                 from /usr/local/cuda/bin/../targets/x86_64-linux/include/crt/math_functions.h:4577,\n",
-      "                 from /usr/local/cuda/bin/../targets/x86_64-linux/include/crt/common_functions.h:303,\n",
-      "                 from /usr/local/cuda/bin/../targets/x86_64-linux/include/cuda_runtime.h:117,\n",
-      "                 from <command-line>:\n",
-      "/usr/include/math.h:1152: note: this is the location of the previous definition\n",
-      " 1152 | # define M_PI           3.14159265358979323846  /* pi */\n",
-      "      | \n",
-      "ptxas info    : 16 bytes gmem, 16 bytes cmem[4]\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_lut_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_lut_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 40 registers, used 1 barriers, 404 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 6.809 ms\n",
-      "\n",
-      "Kernel multi_overlap_lut_total:\n",
-      "  Registers: 40\n",
-      "  Shared mem: 0 bytes\n",
-      "  Max threads/block: 1024\n"
+      "Solution shape: xyt=(64000000, 2, 3), h=(64000000, 3)\n"
      ]
     }
    ],
@@ -311,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1b0550c8",
    "metadata": {},
    "outputs": [
@@ -361,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "aca6bb2d",
    "metadata": {},
    "outputs": [
@@ -419,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "57d05df2",
    "metadata": {},
    "outputs": [
@@ -506,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "da9cdb4c",
    "metadata": {},
    "outputs": [
@@ -537,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "24519cb4",
    "metadata": {},
    "outputs": [
